Update Predictive Model to Predict Salary.ipynb

--- a/Predictive Model to Predict Salary.ipynb
+++ b/Predictive Model to Predict Salary.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "source": [
     "## Introduction:\n",
-    "In this project, we will use the census data from 1994 to attempt to predict whether or not a person has an annual salary greater than $50,000 based on other information provided in the census. More details can be found at: https://archive.ics.uci.edu/ml/datasets/adult\n",
+    "In this project, census data from 1994 is used to attempt to predict whether or not a person has an annual salary greater than $50,000 based on other information provided in the census. More details can be found at: https://archive.ics.uci.edu/ml/datasets/adult\n",
     "\n",
     "**Attribute Information:**  \n",
     "- **age:** continuous.\n",
