Update Predictive Model to Predict Salary.ipynb

--- a/Predictive Model to Predict Salary.ipynb
+++ b/Predictive Model to Predict Salary.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "source": [
     "## Part A: Set up Environment\n",
-    "#### In this part, we will import the required tools for analysis."
+    "#### Import the required tools for analysis."
    ]
   },
   {
@@ -65,7 +65,7 @@
    "source": [
     "## Part B: Load and Explore the Data\n",
     "\n",
-    "#### In this part, we will load the data 'census.txt' to DataFrame and do a quick preview."
+    "#### Load the data 'census.txt' and do a quick preview."
    ]
   },
   {
