Update Predictive Model to Predict Salary.ipynb

--- a/Predictive Model to Predict Salary.ipynb
+++ b/Predictive Model to Predict Salary.ipynb
@@ -648,7 +648,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Here, we will randomly split the data into training and hold by 0.7 : 0.3 ratio and then further split the hold data to validation and test by 0.5 : 0.5. We will use stratified sampling to maintain the proportion of the v"
+    "#### Here, we will randomly split the data into training and hold by 0.7 : 0.3 ratio and then further split the hold data to validation and test by 0.5 : 0.5. We will use stratified sampling to maintain the proportion of the label"
    ]
   },
   {
